--- a/FINAL-PROJECT-THUB/src/main/resources/application.properties
+++ b/FINAL-PROJECT-THUB/src/main/resources/application.properties
@@ -2,15 +2,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB location + name
-#spring.datasource.url=jdbc:mysql://containers-us-west-186.railway.app/railway
+spring.datasource.url=jdbc:mysql://containers-us-west-186.railway.app:6803/railway
 
 # DB user/pass
-#spring.datasource.username=root
-#spring.datasource.password=JtIS8XoQmx86ywZmDMXA
-
-spring.datasource.url=jdbc:mysql://192.168.1.177:3306/hue
-spring.datasource.username= java
-spring.datasource.password= Java_R00t
+spring.datasource.username=root
+spring.datasource.password=JtIS8XoQmx86ywZmDMXA
 
 # SQL config
 spring.jpa.show-sql=true
@@ -18,5 +14,5 @@ spring.jpa.open-in-view=true
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 
-# Railway DB port
-server.port=6803
+# Server Port
+server.port=8080
