--- a/FINAL-PROJECT-THUB/src/main/resources/application.properties
+++ b/FINAL-PROJECT-THUB/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Server Port
 server.port=8080
+
+# Token Properties
+THUB.jwtSecret= jwtSecretK3y
+THUB.jwtExpirationMs= 86400000
