--- a/FINAL-PROJECT-THUB/pom.xml
+++ b/FINAL-PROJECT-THUB/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 		    <groupId>org.hibernate.validator</groupId>
 		    <artifactId>hibernate-validator</artifactId>
-		    <version>8.0.0.Final</version>
+		    <version>8.0.0.Final</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
 		<dependency>
