NO PASSWORDS HERE

--- a/FINAL-PROJECT-THUB/src/main/resources/application.properties
+++ b/FINAL-PROJECT-THUB/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB location + name
-spring.datasource.url=jdbc:mysql://containers-us-west-186.railway.app:6803/railway
+spring.datasource.url= {SQL}
 
 # DB user/pass
-spring.datasource.username=root
-spring.datasource.password=JtIS8XoQmx86ywZmDMXA
+spring.datasource.username= {USER}
+spring.datasource.password= {PASS}
 
 # SQL config
 spring.jpa.show-sql=true
@@ -15,8 +15,8 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 
 # Server Port
-server.port=8080
+server.port= {PORT}
 
 # Token Properties
-THUB.jwtSecret= jwtSecretK3y
-THUB.jwtExpirationMs= 86400000
+THUB.jwtSecret= {SECRET}
+THUB.jwtExpirationMs= {EXPIRATION}
