--- a/FINAL-PROJECT-THUB/src/main/resources/application.properties
+++ b/FINAL-PROJECT-THUB/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 
 # Server Port
-server.port= {PORT}
+server.port= 8080
 
 # Token Properties
 THUB.jwtSecret= {SECRET}
