--- a/FINAL-PROJECT-THUB/src/main/resources/application.properties
+++ b/FINAL-PROJECT-THUB/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
